--- a/package.json
+++ b/package.json
@@ -22,9 +22,15 @@
   },
   "homepage": "https://github.com/ReiniervanLimpt/project-tech-21#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.0"
+    "express-handlebars": "^5.3.0",
+    "express-session": "^1.17.1",
+    "fs-extra": "^10.0.0",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.7",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "browser-sync": "^2.26.14",
